; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_wlan/extr_wlan_sys.c_wlan_config_set_ioctl.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_wlan/extr_wlan_sys.c_wlan_config_set_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlan_iface = type { i32, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlan_config_set_ioctl(%struct.wlan_iface* %0, i32 %1, i32 %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.wlan_iface*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.wlan_iface* %0, %struct.wlan_iface** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* %8, align 4
  switch i32 %13, label %41 [
    i32 132, label %14
    i32 128, label %21
    i32 129, label %28
    i32 130, label %33
    i32 131, label %37
  ]

14:                                               ; preds = %5
  %15 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %18 = getelementptr inbounds %struct.wlan_iface, %struct.wlan_iface* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @wlan_config_set_country(%struct.wlan_iface* %15, i8* %16, i32 %19)
  store i32 %20, i32* %6, align 4
  br label %48

21:                                               ; preds = %5
  %22 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %23 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %24 = getelementptr inbounds %struct.wlan_iface, %struct.wlan_iface* %23, i32 0, i32 1
  %25 = load i8*, i8** %24, align 8
  %26 = load i32, i32* %9, align 4
  %27 = call i32 @wlan_config_set_country(%struct.wlan_iface* %22, i8* %25, i32 %26)
  store i32 %27, i32* %6, align 4
  br label %48

28:                                               ; preds = %5
  %29 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = load i32, i32* %11, align 4
  %32 = call i32 @wlan_config_set_dssid(%struct.wlan_iface* %29, i8* %30, i32 %31)
  store i32 %32, i32* %6, align 4
  br label %48

33:                                               ; preds = %5
  %34 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @wlan_config_set_dchannel(%struct.wlan_iface* %34, i32 %35)
  store i32 %36, i32* %6, align 4
  br label %48

37:                                               ; preds = %5
  %38 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %39 = load i8*, i8** %10, align 8
  %40 = call i32 @wlan_config_set_bssid(%struct.wlan_iface* %38, i8* %39)
  store i32 %40, i32* %6, align 4
  br label %48

41:                                               ; preds = %5
  %42 = load i32, i32* %8, align 4
  %43 = call i32 @wlan_config_snmp2ioctl(i32 %42)
  store i32 %43, i32* %12, align 4
  %44 = load %struct.wlan_iface*, %struct.wlan_iface** %7, align 8
  %45 = load i32, i32* %12, align 4
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @wlan_config_set_intval(%struct.wlan_iface* %44, i32 %45, i32 %46)
  store i32 %47, i32* %6, align 4
  br label %48

48:                                               ; preds = %41, %37, %33, %28, %21, %14
  %49 = load i32, i32* %6, align 4
  ret i32 %49
}

declare dso_local i32 @wlan_config_set_country(%struct.wlan_iface*, i8*, i32) #1

declare dso_local i32 @wlan_config_set_dssid(%struct.wlan_iface*, i8*, i32) #1

declare dso_local i32 @wlan_config_set_dchannel(%struct.wlan_iface*, i32) #1

declare dso_local i32 @wlan_config_set_bssid(%struct.wlan_iface*, i8*) #1

declare dso_local i32 @wlan_config_snmp2ioctl(i32) #1

declare dso_local i32 @wlan_config_set_intval(%struct.wlan_iface*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
